--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hacker-news",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/StasOger/hackerNewsAPI-reactjs",
+  "homepage": "https://stasoger.github.io/hackerNewsAPI-reactjs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
